Bugfix: apikey.txt for new project was not automatically generated